--- a/src/main/resources/com/example/isscan/revshell.fxml
+++ b/src/main/resources/com/example/isscan/revshell.fxml
@@ -14,14 +14,14 @@
                     <items>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                            <children>
-                              <TextField layoutX="20.0" layoutY="73.0" text="IP" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="73.0" />
-                              <TextField text="端口" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" />
+                              <TextField fx:id="ip" layoutX="20.0" layoutY="73.0" promptText="IP" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="73.0" />
+                              <TextField fx:id="port" promptText="端口" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" />
                               <Text layoutX="28.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="IP &amp; Port" />
                            </children></AnchorPane>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                            <children>
                               <Text layoutX="27.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Listener" />
-                              <Text layoutX="172.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="nc -lvnp 9001" />
+                              <Text fx:id="genListener" layoutX="172.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="nc -lvnp 9001" />
                               <Text layoutX="72.0" layoutY="128.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type" />
                               <ChoiceBox fx:id="choice_type" layoutX="133.0" layoutY="112.0" prefWidth="150.0" />
                            </children></AnchorPane>
